trying out some changes to aim for the proper operation of deploy-deno

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,4 @@ jobs:
         with:
           project: "skanoteka-pobieracz"
           entrypoint: "main.ts"
-          root: "./client/"
+          root: "."
