moved all navigations support after documentation, to 1 NavDocs.ts file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,7 @@
     "pupillaria",
     "Skanoteka",
     "successionalia",
+    "svgs",
     "sygnaturalne",
     "tailwindcss",
     "uruchomieniowe"
